# clawcam

./: .gitignore  Cargo.toml  README.md  SKILL.md  install.sh  skill-install.sh
.github/workflows/: release.yml
src/: main.rs  ptz.rs  update.rs
src/cmd/: mod.rs
src/detect/: mod.rs  monitor.rs  orientation.rs  pipeline.rs  ptz_track.rs  yolo.rs
src/device/: mod.rs
src/media/: audio.rs  clip.rs  mod.rs  ptz.rs  snap.rs
src/ssh/: mod.rs  session.rs  setup.rs  status.rs  teardown.rs
src/webhook/: mod.rs
